Fixed brand taking up the full width of the header on mobile. Administrators can now see email addresses on a user's page for extra verification.

--- a/config/sass/layout/_nav.scss
+++ b/config/sass/layout/_nav.scss
@@ -12,9 +12,13 @@
         }
     }
 }
-.nav-brand a {
-    display: block;
-    font-size: 2rem;
+.nav-brand {
+    margin-right: auto;
+
+    a {
+        display: block;
+        font-size: 2rem;
+    }
 }
 .nav-toggle {
     position: absolute;
@@ -67,8 +71,6 @@
         margin: 0 1rem;
     }
     .nav-brand {
-        margin-right: auto;
-
         a {
             padding: 0;
         }
